<resources>
    <string name="app_name">Donation</string>


    <string name="sign_up_tv">Sign up</string>
    <string name="sign_in_tv">Sgin in</string>
    <string name="sign_in_welcome_back">Welcome back!</string>
    <string name="sign_in_to_comtinue_tv">Sign in to continue</string>
    <string name="remember_me_tv">Remember me</string>
    <string name="forget_password_tv">Forget password ?</string>
    <string name="sign_in_btn">Sign in</string>
    <string name="already_have_not_an_account_tv">Already have not an account?</string>
    <string name="sing_up_tv">Sing up !</string>
    <string name="fullname_hint">Full Name</string>
    <string name="phoneNumber_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="sign_in">Sign in !</string>
    <string name="select_user_tv">Select user</string>
    <string name="user">Private user</string>
    <string name="corporation">Corporation</string>
    <string name="corporationName_hint">Corporation Name</string>
    <string name="layotu_notifications">Notifications</string>
    <string name="layout_search">Search</string>
    <string name="hint_search">Enter what you want to search for</string>
    <string name="changePassword">Change Password</string>
    <string name="allFavorites">All Favorites</string>
    <string name="signOut">Sign Out</string>
    <string name="language">Language</string>
    <string name="contactUs">Contact Us</string>
    <string name="rateUs">Rate Us</string>
    <string name="oldPassword">Old Password</string>
    <string name="saveNow">Save Now !</string>
    <string name="address_hint">Address</string>
    <string name="addPhoto">Add Photo</string>
    <string name="addVideo">Add Video</string>
    <string name="addPost_tv">Add Post</string>
    <string name="or_tv">Or</string>
    <string name="addMore">Add more</string>
    <string name="noBio">has not put in Bio yet</string>
    <string name="post">Post</string>
    <string name="favorite">Favorite</string>
    <string name="follow">Follow</string>
    <string name="chat">Chat</string>
    <string name="Posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="editProfile">Edit profile</string>
    <string name="app_review">App Review</string>
    <string name="introduction_review">Please rate the quality of service for the App</string>
    <string name="desc_review">Your comments and suggestions help us improve the service quality better!</string>
    <string name="note_review">Enter your note here</string>
    <string name="btn_submit_reivew">Submit</string>
    <string name="toast_nullName">please enter your name</string>
    <string name="toast_nullCorporationName">please enter the corporation name</string>
    <string name="toast_nullPhoneNumber">please enter your phone number</string>
    <string name="toast_nullAddress">please enter your address</string>
    <string name="toast_nullEmail">please enter an email</string>
    <string name="toast_nullEmail_login">please enter the email</string>
    <string name="toast_nullPassword_login">please enter the password</string>
    <string name="toast_nullPassword">please enter a password</string>
    <string name="toast_nullConfirmPassword">please confirm the password</string>
    <string name="toast_nullShortBio">please enter a short bio</string>
    <string name="toast_allowNumOfCahr">The number of characters allowed is 100!</string>
    <string name="toast_passwordDoesNotMatch">Password does not match !</string>
    <string name="contact_us_help">Tell us how we can help you</string>
    <string name="contact_us_enter_your_email">Enter Your Email</string>
    <string name="contact_us_enter_your_message">Enter Your Message</string>
    <string name="contact_us_send_message">Send Message</string>
    <string name="short_bio">You can add a short bio to tell people maore about yourself.</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="save">Save</string>
    <string name="confirmSignOut">Are you sure you want to sign out?</string>
    <string name="ok">Ok</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="toast_oldPassword">Please enter the old password</string>
    <string name="toast_newPassword">Please enter a new password</string>
    <string name="toast_notIdentical">The password is not identical</string>
    <string name="toast_incorrect">The old password is incorrect</string>
    <string name="toast_passwordChangedSuccessfully">Password changed successfully</string>
    <string name="editProfileSuccessfully">Profile has been edited successfully</string>
    <string name="areYouSure">Are you sure</string>
    <string name="youWantToSignOut">you want to sign out ?</string>
    <string name="addCharityCompagin">Add charity campaign</string>
    <string name="toast_notAllwoed">It is only allowed when the account is confirmed</string>
    <string name="toast_waitUploaded">Wait when the post is uploaded</string>
    <string name="addCharityCampaign">Add Charity Campaign</string>
    <string name="EnterDonationLink">Enter the donation link</string>
    <string name="internet_error">You need internet connection for this feature</string>
    <string name="move">Move</string>
    <string name="toast_post_published">Your post has been published</string>
    <string name="toast_post_failed">Failed to publish your post</string>
    <string name="no_comment">No Comments Yet</string>
    <string name="start_the_conversation">Start the conversation</string>
    <string name="tv_post">Post</string>
    <string name="et_add_comment">Send a comment...</string>
    <string name="comments">Comments</string>
    <string name="toast_empty_comment">You can not send empty comment</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="update">Update</string>
    <string name="Cancel">Cancel</string>
    <string name="seconds_ago">Seconds ago</string>
    <string name="minutes_ago">Minutes ago</string>
    <string name="hourss_ago">Hours ago</string>
    <string name="minute_ago">"Minute ago"</string>
    <string name="second_ago">"Second ago"</string>
    <string name="hour_ago">"Hour"</string>
    <string name="delete_post">Are you sure you want to delete the post?</string>
    <string name="toast_post_delete">Your post has been deleted</string>
    <string name="toast_moment">Please Wait..</string>
    <string name="send_message_chat">Send message</string>
    <string name="addcharitycompagin">Add charity compagin</string>
    <string name="your_subject">Your subject</string>
    <string name="posts">Posts</string>
    <string name="post_has_been_modified">Post has been modified</string>
    <string name="saved">Saved</string>
    <string name="unsave">Unsave</string>
    <string name="unSave">Save has been cancelled</string>
    <string name="noDescription">No description</string>
    <string name="unfollow">Following</string>
    <string name="all">All</string>
    <string name="description">Description (Optional)</string>
    <string name="chooseLanguage">Choose language...</string>
    <string name="add_video">Add Video</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    =
    <string name="sendSellerAMessage">Send seller a message</string>
    <string name="send">Send</string>
    <string name="is_this_still_available">Is this still available ?</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="seller_information">Seller information</string>
    <string name="see_profile">See profile</string>
    <string name="tv_description">Description</string>
    <string name="likes">LIkes</string>
    <string name="hint_email">man2000@hotmail.com</string>
    <string name="profile">Profile</string>
    <string name="remove">Remove</string>
    <string name="seeYourProfile">See your profile</string>
    <string name="tv_notfcation">No notifications</string>
    <string name="donation_link">Donation link</string>
    <string name="no_posts">No posts</string>
    <string name="certificate_verification">"Certificate Verification"</string>
    <string name="confirmSend">Are you sure you want to send this picture ?</string>
    <string name="somethingWrong">There is something wrong : please try again</string>
    <string name="certificate_verification_message">Certificate uploaded successfully, please wait at least 3 days to receive a response</string>
    <string name="tv_certificate_progress_please_wait">Certificate Verification in progress Please wait...</string>
    <string name="toast_permission_must_be_obtained">Permission must be obtained</string>
    <string name="forget_password">Forget Password</string>
    <string name="Please_Enter_Your_Confirm_Password">Please Enter Your Confirm Password</string>
    <string name="delete_notification">Are you sure you want to delete the notification?</string>
    <string name="toast_notification_delete">Your notification has been deleted</string>
    <string name="notification_like">reacted to your post</string>
    <string name="notification_comment">commented on your post</string>
    <string name="notification_follow">started following you</string>
    <string name="forget_password_message">"The password change link has been sent to the email you entered "</string>
    <string name="search_email">"Email search"</string>

</resources>