<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F9F9FF"
    tools:context=".AddPostFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_16sdp"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/addPost_tv"
                android:layout_gravity="center_horizontal"
                ></TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/addPhoto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="#00B588"
                app:cornerRadius="@dimen/_25sdp" />

            <TextView
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/or_tv"
                android:layout_gravity="center_horizontal"
                ></TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_86sdp"
                android:gravity="center"
                android:text="@string/addVideo"
                android:textAllCaps="false"
                android:textColor="#00B588"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="#F9F9FF"
                app:cornerRadius="@dimen/_25sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>