<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9FF"
    tools:context=".ChangePasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_6sdp"
        android:layout_margin="@dimen/_20sdp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/et_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/et_shape"
                android:hint="@string/oldPassword"
                android:inputType="textPersonName"
                android:padding="@dimen/_16sdp"
                android:textColor="#1C2340"
                android:textColorHint="#1C2340"
                android:textSize="@dimen/_12sdp"></EditText>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/et_shape"
                android:hint="@string/password_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/_16sdp"
                android:textColor="#1C2340"
                android:textColorHint="#1C2340"
                android:textSize="@dimen/_12sdp"
                ></EditText>

            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/et_shape"
                android:hint="@string/confirmPassword_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/_16sdp"
                android:textColor="#1C2340"
                android:textColorHint="#1C2340"
                android:textSize="@dimen/_12sdp"
                ></EditText>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/remember_me_cb"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/saveNow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:backgroundTint="#00B588"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cornerRadius="@dimen/_25sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="#00FFFFFF"
            android:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary">
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/changePassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:tint="@color/black"
                    android:src="@drawable/ic_arrow"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</RelativeLayout>